2008-11-06  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/pSet.ml*: [print] added

	* src/core/extlib/pMap.ml*: [print] added

	* src/core/extlib/extSet.ml*: created

	* src/core/extlib/extHashtbl.mli: fixed documentation typo

	* src/core/extlib/extStack.ml*: created

	* src/core/extlib/extQueue.ml*: created

	* src/core/batteries_core.ml: [Queue] is now [Extlib.ExtQueue.Queue]

	* src/core/extlib.mlpack: [ExtMap], [ExtQueue], [ExtStack] added

	* src/core/batteries_core.ml: module [Map] is now [Extlib.ExtMap.Map]

	* src/main/threads/batteries.mllib: removed [Batlib_baselib_Gc], [Batlib_baselib_Unix], [Map]

	* src/main/nothreads/batteries.mllib: removed [Batlib_baselib_Gc], [Batlib_baselib_Unix], [Map]

	* src/core/extlib_threads/extUnixThreads.ml: replaced [Std] with [Extlib.Std]

	* tests/Makefile: targets [all], [byte], [opt] removed, targets [bytelib] and [optlib] added
	
	* src/batteries_toolchain/batteries_help.ml: occurrences of [Batteries_config] replaced with [Toolchain.Sysconfig]

	* src/core/batteries_core_threads.ml: module [Toolchain.Sysconfig] added

	* src/core/batteries_core.ml: module [Toolchain.Sysconfig] added

2008-11-05  David Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/html/about.html (simple): Added a few lines on CDK

	* src/batteries_toolchain/batteries_help.ml: Fixed typo in a string

2008-11-05  David Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/ocamlcp: created
	
	* src/batteries_toolchain/ocamlc: created

	* src/batteries_toolchain/ocaml: renamed from bocaml

	* src/batteries_toolchain/ocaml: now using [ocamlfind]

	* src/core/batteries_toolchain: renamed from src/core/toplevel

2008-11-05  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib_threads/: created

	* src/core/extlib_threads.mlpack: created

	* src/main/threads/batteries.mllib: [InnerWeaktbl] added

	* src/main/nothreads/batteries.mllib: [InnerWeaktbl] added
