@@ -30,7 +30,7 @@ If you are new to OCaml, the best place to start is probably the <emph>toplevel<
 a minimal interactive environment in which you may write OCaml code and evaluate it
 immediately, without having to go through a compilation process.
 
-<h2>Launching the toplevel<a name="launching"/></h2>
+<h2>Launching the toplevel<a name="launching"></a></h2>
 To launch the toplevel from a terminal, open a terminal
 and write
 <pre class="example">
@@ -56,11 +56,11 @@ and, when Emacs asks you for the name of your OCaml toplevel, answer
 ocamlfind batteries/ocaml
 </pre>
 
-<h2>What is the toplevel?<a name="what"/></h2> 
+<h2>What is the toplevel?<a name="what"></a></h2> 
 
-You can think of the top-level as a very powerful calculator or as a
+You can think of the toplevel as a very powerful calculator or as a
 command-line interface comparable to that of your operating system.
-The role of this top-level waits for your commands, evaluates them and
+The role of this toplevel waits for your commands, evaluates them and
 prints results. This makes it a nice way a to learn OCaml and to test
 algorithms and data structures.
 
@@ -68,6 +68,159 @@ algorithms and data structures.
 
 When you launch the toplevel, it displays something along the lines of:
 
+<pre class="example">
+        Objective Caml version 3.10.2
+
+
+
+----------------------------------------------
+|                                            |
+|     This is OCaml, Batteries Included.     |
+|                                            |
+|                                            |
+|      If you need help, type '#help;;'      |
+|                                            |
+----------------------------------------------
+
+
+        Camlp4 Parsing version 3.10.2
+
+# 
+</pre>
+
+The message informs you that you are running OCaml version 3.10.2,
+with support for language extensions also in version 3.10.2 (this
+support is called <emph>Camlp4</emph>) and that you are using the
+complete OCaml platform (this platform is called <emph>OCaml,
+Batteries Included</emph>) rather than a trimmed-down distribution
+targetted for experiments or embedded systems.
+<br />
+See the <code># </code> at the end? This means that the toplevel
+is waiting for an order. Whenever you see that character (except when
+you've written it yourself, of course), it means that it's up
+to you to write something.
+
+<h2>Orders for the toplevel<a name="orders"></a></h2> 
+Orders can take the form of value definitions, type definitions,
+evaluations or directives. Value definitions let you teach OCaml new
+tricks. Type definitions let you teach OCaml how to understand new
+kinds of values informations and how to check that you're not making
+mistakes when using your definitions. Evaluations let you actually do
+something with your definitions, such as computing the result of your
+algorithm, but also doing more complex things such as opening
+applications, modifying files, or even creating websites. Any program
+is composed of value definitions, type definitions and evaluations.
+<br />
+Finally, directives are not part of any program. They just let you
+interact with the Toplevel, for instance by loading other programs,
+reading the documentation, asking the Toplevel for information on
+existing programs, etc. Directives are easy to spot, they also start
+with character '#'. 
+
+
+<h2>Directives<a name="directives"></a></h2>
+The toplevel supports the following directives:
+<dl>
+ <dt><code class="example">#quit;;</code></dt> <dd>This quits the toplevel immediately, without any error message.</dd>
+ <dt><code class="example">#use "some_file.ml";;</code></dt><dd>Load some source code from file <code>some_file.ml</code>.
+   Of course, this source code must be written in OCaml.</dd>
+ <dt><code class="example">#require "some_package";;</code></dt>
+ <dd>Load a library (actually, a package, which can contain several libraries).
+   Packages may add new functions, new type definitions, as well as new directives
+   or even modifications to the language.
+</dd>
+ <dt><code class="example">#list;;</code></dt><dd>List the packages installed on your system.</dd>
+ <dt><code class="example">#help;;</code></dt><dd>Ask for help.</dd>
+ <dt><code class="example">#man "some subject";;</code></dt><dd>Read the documentation on a given subject. This requires an installed Web browser.</dd>
+ <dt><code class="example">#load "some_file.cmo";;</code> or <code class="example">#load "some_file.cma";;</code></dt><dd>Load a module which has been previously compiled with OCaml.
+ By default, this module is searched in the current directory and in the directory containing OCaml's base library.</dd>
+ <dt><code class="example">#directory "some directory/";;</code></dt><dd>Instruct the toplevel to search for compiled modules in additional directories.</dd>
+ <dt><code class="example">#trace some_function;;</code> (without quotes)</dt><dd>Instruct the toplevel to display useful debugging messages when running function <code>some_function</code>.</dd>
+ <dt><code class="example">#untrace some_function;;</code> (without quotes)</dt><dd>Cancel a <code>#trace</code>.</dd>
+</dl>
+
+A few additional low-level directives are available, which allow
+customizing the manner in which OCaml should display values or errors.
+
+<h2>Common error messages<a name="errors"></a></h2>
+
+<h3>Loading modules</h3>
+Normally, none of these error messages can be displayed as the
+consequence of loading a package with <code>#require</code>, as this
+command takes care of most of the underlying difficulties.
+
+<h5>Cannot find <emph>filename.cmo</emph> or <emph>filename.cma</emph></h5>
+
+You have instructed OCaml to <code>#load</code> some compiled module
+but the toplevel cannot find it. You may have miswritten the name of
+the file. More likely, this means that the file is in a directory
+where OCaml doesn't know that it should be looking for it.  To fix
+this, use <code>#directory</code>.
+
+
+<h5>Cannot find <emph>filename.cmi</emph></h5>
+
+A file with suffix <code>.cmi</code> contains information which tells OCaml how to use
+a compiled module. If OCaml can find the corresponding <code>.cmo</code> file but not
+the <code>.cmi</code>, it generally means that the file is missing, either because
+compilation was not complete, because a program was improperly installed or sometimes
+because the author of the module doesn't want people to use it.
+
+<h5>Reference to undefined global <emph>Foo</emph>.</h5>
+
+If you encounter this error message, it means that OCaml knows that
+there should be a module called <code>Foo</code> somewhere around,
+because it is using code which requires that module, but the
+the <code>.cmo</code> or <code>.cmi</code> for that module haven't
+been loaded. To fix this, you need to <code>#load</code> the
+corresponding <code>.cmo</code>/<code>.cmi</code>.  <br /> 
+
+Yes, this means that OCaml doesn't automatically attempt
+to <code>#load</code> modules it can't find. There is a simple reason
+for this: you may have thousands of <code>.cmo</code> installed on
+your computer. Loading each of these modules could trigger programs,
+which may run for long time and cause unwanted side-effects. 
+Consequently, the developers of OCaml decided that loading
+of external modules would not be automatic. In other words,
+you need to load them.
+
+<h3>Writing code</h3>
+<h5>This expression has type <emph>foo</emph> but is used with type <emph>bar</emph></h5>
+
+OCaml performs automatically rather advanced techniques for checking
+that your code is correct and that it will execute without causing any
+weird error. In fact, OCaml won't let you run code which would cause a
+weird error. 
+<br />
+This error message happens because OCaml has found an
+inconsitency in your program: OCaml has determined that a part of your
+code (the expression, which the toplevel has helpfully underlined for
+you) will have a result of type <code>foo</code> -- however, by examining
+how the rest of your program uses that result, OCaml has also
+determined that the rest of your program believes that the expression
+should have type <code>bar</code>, which is incoherent.
+<br />
+There is no magic bullet for this error. You need to find the error
+in your program and fix it.
+
+<h5>This expression has type  <emph>foo</emph> but is used with type <emph>foo</emph></h5>
+
+This is a surprising error message: how can OCaml tell you that your
+expression has type <code>foo</code> but should have, well, the same
+type <code>foo</code>?
+<br />
+The explanation is actually quite simple: you have two types with
+the same name. For some reason, usually as a consequence of copying
+and pasting, you have defined a type <code>foo</code>, then some
+values of type <code>foo</code>, and then a second type <code>foo</code>
+and some other values of type <code>foo</code>. The second type
+<code>foo</code> doesn't replace the first one, even if they may look
+identical. Consequently, when you start attempting to mix values of
+the first type <code>foo</code> and values of the second
+type <code>foo</code>, OCaml deduces that there is something wrong.
+<br />
+Quite often, the solution to this problem is leaving the toplevel
+and restarting it.
 
 </body>
 </html>
