@@ -3,3 +3,4 @@
 "The Tutorial": "http://www.cs.jhu.edu/~scott/pl/lectures/caml-intro.html"
 "For programmers": "http://www.ocaml-tutorial.org"
 "for programmers": "http://www.ocaml-tutorial.org"
+"directives":   "html/toplevel.html#directives"
